<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recargas_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ozkrp.fuelwatcher.RecargaActivity">

    <TextView
        android:id="@+id/textoTitulo"
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_recargas"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/editText_fecha_recarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_fecha"
        android:inputType="date"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_odometro" />

    <EditText
        android:id="@+id/editText_odometro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_odometro"
        android:inputType="number"
        tools:layout_editor_absoluteY="186dp"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toRightOf="@+id/editText_fecha_recarga"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/editText_monto_recarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_monto"
        android:inputType="number"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/textoLitros" />

    <TextView
        android:id="@+id/textoLitros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/litros"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toRightOf="@+id/editText_monto_recarga"
        app:layout_constraintRight_toLeftOf="@+id/textoLitrosNumero"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintBaseline_toBaselineOf="@+id/textoLitrosNumero" />

    <TextView
        android:id="@+id/textoLitrosNumero"
        android:layout_width="19dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:layout_editor_absoluteY="255dp"
        tools:layout_editor_absoluteX="284dp" />

    <Spinner
        android:id="@+id/Spinner_vehiculos"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        tools:layout_editor_absoluteY="69dp"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toRightOf="@+id/textView"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Spinner
        android:id="@+id/Spinner_combustibles"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        tools:layout_editor_absoluteY="117dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/botonConfirmarCarga"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:text="@string/boton_confirmar"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />

    <TextView
        android:text="Vehiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        tools:layout_editor_absoluteY="81dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:text="Combustible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        tools:layout_editor_absoluteY="130dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
